<resources>
    <string name="app_name">HelloWorld</string>
    <string name="Botao_somar">Somar</string>
    <string name="botao_janela">Janela</string>
    <string name="txt_valor">valor:</string>
    <string name="txt_gorjeta">gorjeta:</string>
    <string name="txt_total">total:</string>
    <string name="txt_re">RE:</string>
    <string name="txt_nome">Nome:</string>
    <string name="txt_dataadmissao">Data de Admissão:</string>
    <string name="txt_salario">Salário:</string>
    <string name="txt_cadastrar">Cadastrar</string>
    <string name="txt_limpar">Limpar</string>
    <string name="txt_buscar">Buscar</string>
    <string name="txt_excluir">Excluir</string>
    <string name="txt_atualizar">Atualizar</string>
    <string name="txt_lista">Lista</string>
    <string name="txt_bd">Banco de Dados</string>
    <string name="txt_desenho">Desenho</string>
    <string name="txt_sensores">Sensores</string>
    <string name="txt_http">HTTP</string>
    <string name="txt_mapas">Mapas</string>
</resources>